--- a/AndroidStudioProjects/MyApplication/app/src/main/res/layout/hello_activity.xml
+++ b/AndroidStudioProjects/MyApplication/app/src/main/res/layout/hello_activity.xml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:id="@+id/hello"
-        android:layout_gravity="center"
-        android:text="HELLOWORLD"
-        />
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/content"
+        android:layout_marginBottom="60dp">
+
+    </FrameLayout>
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:id="@+id/frag_tabbar"
+        android:layout_gravity="bottom"
+        class="com.example.helloworld.fragments.widgets.MainTabbarFragment"
+        tools:layout="@layout/fragment_widget_main_tabbar">
+
+    </fragment>
+
 
 </FrameLayout>
